[metadata]
name = kdlines
version = 0.1
description = Kernel density estimation and heatmap visualisation on many lines, time series or 2D data using scikit-learn.
long_description = file: README.md, LICENSE
license = MIT
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
python_requires = >= 3.8
packages = kdlines
zip_safe = False
install_requires =
    scikit-learn
    numpy
    matplotlib

[options.packages.find]
exclude =
    examples*
    docs*
    tests*